syntax = "proto3";

package bo_block_user;

import "google/protobuf/empty.proto";

service BOBlockUserService {
  rpc Add(AddRequest) returns (BOBlockUserResponse);
  rpc FindOne(FindOneRequest) returns (BOBlockUserResponse);
  rpc List(ListRequest) returns (ListDataResponse);
  rpc Delete(DeleteRequest) returns (BOBlockUserResponse);
  rpc Export(ListRequest) returns (ListDataResponse);
};

message BOBlockUser {
  string id = 1;
  string user_id = 2;
  string email = 3;
  string updated_at = 4;
  string created_at = 5;
  string reason = 6;
}


// LIST REQUEST
message AddRequest {
  uint32 user_id = 1;
  string reason = 2;
};

message ID {
  int32 id = 1;
}

message FindOneRequest {
  optional uint32 id = 1;
  optional uint32 user_id = 2;
}

message ListRequest {
  optional uint32 page = 1;
  optional uint32 limit = 2;
  optional string search_field = 4;
  optional string search_text = 5;
  optional string sort = 6;
  optional string sort_type = 7;
  optional string lang = 8;
}

message DeleteRequest {
  uint32 id = 1;
}


// RESPONSE
message BOBlockUserResponse {
  bool success = 1;
  optional string message = 2;
  optional BOBlockUser data = 3;
}

message ListMeta {
  uint32 total_items = 1;
  uint32 item_count = 2;
  uint32 items_per_page = 3;
  uint32 total_pages = 4;
  uint32 current_page = 5;
}

message ListData {
  repeated BOBlockUser items = 1;
  optional ListMeta meta = 2;
}

message ListDataResponse {
  bool success = 1;
  optional string message = 2;
  optional ListData data = 3;
}
